y.output
Terminals unused in grammar

    T_Print
    T_NEQ
    T_If
    T_Elif
    T_Else
    T_List


Grammar

    0 $accept: StartDebugger $end

    1 $@1: %empty

    2 StartDebugger: $@1 StartParse T_EndOfFile

    3 constant: T_Number
    4         | T_String

    5 term: T_ID
    6     | constant
    7     | list_index

    8 list_index: T_ID T_OB constant T_CB

    9 StartParse: T_NL StartParse

   10 $@2: %empty

   11 StartParse: finalStatements T_NL $@2 StartParse
   12           | finalStatements T_NL

   13 basic_stmt: pass_stmt
   14           | break_stmt
   15           | import_stmt
   16           | assign_stmt
   17           | arith_exp
   18           | bool_exp
   19           | return_stmt

   20 arith_exp: term
   21          | arith_exp T_PL arith_exp
   22          | arith_exp T_MN arith_exp
   23          | arith_exp T_ML arith_exp
   24          | arith_exp T_DV arith_exp
   25          | T_MN arith_exp
   26          | T_OP arith_exp T_CP

   27 bool_exp: bool_term T_Or bool_term
   28         | arith_exp T_LT arith_exp
   29         | bool_term T_And bool_term
   30         | arith_exp T_GT arith_exp
   31         | arith_exp T_ELT arith_exp
   32         | arith_exp T_EGT arith_exp
   33         | arith_exp T_In T_ID
   34         | bool_term

   35 bool_term: bool_factor
   36          | arith_exp T_EQ arith_exp
   37          | T_True
   38          | T_False

   39 bool_factor: T_Not bool_factor
   40            | T_OP bool_exp T_CP

   41 import_stmt: T_Import T_ID

   42 pass_stmt: T_Pass

   43 break_stmt: T_Break

   44 return_stmt: T_Return

   45 assign_stmt: T_ID T_EQL arith_exp
   46            | T_ID T_EQL bool_exp
   47            | T_ID T_EQL func_call
   48            | T_ID T_EQL T_OB T_CB

   49 finalStatements: basic_stmt
   50                | cmpd_stmt
   51                | func_def
   52                | func_call
   53                | error T_NL

   54 cmpd_stmt: while_stmt
   55          | for_stmt

   56 while_stmt: T_While bool_exp T_Cln start_suite

   57 for_stmt: T_For T_ID T_In T_Range T_OP constant T_Comma constant T_CP T_Cln start_suite

   58 start_suite: basic_stmt

   59 $@3: %empty

   60 start_suite: T_NL ID $@3 finalStatements suite

   61 suite: T_NL ND finalStatements suite
   62      | T_NL end_suite

   63 $@4: %empty

   64 end_suite: DD $@4 finalStatements

   65 $@5: %empty

   66 end_suite: DD $@5
   67          | %empty

   68 $@6: %empty

   69 args: T_ID $@6 args_list
   70     | %empty

   71 $@7: %empty

   72 args_list: T_Comma T_ID $@7 args_list
   73          | %empty

   74 $@8: %empty

   75 call_list: T_Comma term $@8 call_list
   76          | %empty

   77 $@9: %empty

   78 call_args: T_ID $@9 call_list

   79 $@10: %empty

   80 call_args: T_Number $@10 call_list

   81 $@11: %empty

   82 call_args: T_String $@11 call_list
   83          | %empty

   84 $@12: %empty

   85 func_def: T_Def T_ID $@12 T_OP args T_CP T_Cln start_suite

   86 func_call: T_ID T_OP call_args T_CP


Terminals, with rules where they appear

    $end (0) 0
    error (256) 53
    T_EndOfFile (258) 2
    T_Return (259) 44
    T_Number (260) 3 80
    T_True (261) 37
    T_False (262) 38
    T_ID (263) 5 8 33 41 45 46 47 48 57 69 72 78 85 86
    T_Print (264)
    T_Cln (265) 56 57 85
    T_NL (266) 9 11 12 53 60 61 62
    T_EQL (267) 45 46 47 48
    T_NEQ (268)
    T_EQ (269) 36
    T_GT (270) 30
    T_LT (271) 28
    T_EGT (272) 32
    T_ELT (273) 31
    T_Or (274) 27
    T_And (275) 29
    T_Not (276) 39
    T_In (277) 33 57
    T_Range (278) 57
    ID (279) 60
    ND (280) 61
    DD (281) 64 66
    T_String (282) 4 82
    T_If (283)
    T_Elif (284)
    T_For (285) 57
    T_While (286) 56
    T_Else (287)
    T_Import (288) 41
    T_Break (289) 43
    T_Pass (290) 42
    T_MN (291) 22 25
    T_PL (292) 21
    T_DV (293) 24
    T_ML (294) 23
    T_OP (295) 26 40 57 85 86
    T_CP (296) 26 40 57 85 86
    T_OB (297) 8 48
    T_CB (298) 8 48
    T_Def (299) 85
    T_Comma (300) 57 72 75
    T_List (301)


Nonterminals, with rules where they appear

    $accept (47)
        on left: 0
    StartDebugger <Node> (48)
        on left: 2
        on right: 0
    $@1 (49)
        on left: 1
        on right: 2
    constant <Node> (50)
        on left: 3 4
        on right: 6 8 57
    term <Node> (51)
        on left: 5 6 7
        on right: 20 75
    list_index <Node> (52)
        on left: 8
        on right: 7
    StartParse <Node> (53)
        on left: 9 11 12
        on right: 2 9 11
    $@2 (54)
        on left: 10
        on right: 11
    basic_stmt <Node> (55)
        on left: 13 14 15 16 17 18 19
        on right: 49 58
    arith_exp <Node> (56)
        on left: 20 21 22 23 24 25 26
        on right: 17 21 22 23 24 25 26 28 30 31 32 33 36 45
    bool_exp <Node> (57)
        on left: 27 28 29 30 31 32 33 34
        on right: 18 40 46 56
    bool_term <Node> (58)
        on left: 35 36 37 38
        on right: 27 29 34
    bool_factor <Node> (59)
        on left: 39 40
        on right: 35 39
    import_stmt <Node> (60)
        on left: 41
        on right: 15
    pass_stmt <Node> (61)
        on left: 42
        on right: 13
    break_stmt <Node> (62)
        on left: 43
        on right: 14
    return_stmt <Node> (63)
        on left: 44
        on right: 19
    assign_stmt <Node> (64)
        on left: 45 46 47 48
        on right: 16
    finalStatements <Node> (65)
        on left: 49 50 51 52 53
        on right: 11 12 60 61 64
    cmpd_stmt <Node> (66)
        on left: 54 55
        on right: 50
    while_stmt <Node> (67)
        on left: 56
        on right: 54
    for_stmt <Node> (68)
        on left: 57
        on right: 55
    start_suite <Node> (69)
        on left: 58 60
        on right: 56 57 85
    $@3 (70)
        on left: 59
        on right: 60
    suite <Node> (71)
        on left: 61 62
        on right: 60 61
    end_suite <Node> (72)
        on left: 64 66 67
        on right: 62
    $@4 (73)
        on left: 63
        on right: 64
    $@5 (74)
        on left: 65
        on right: 66
    args <Node> (75)
        on left: 69 70
        on right: 85
    $@6 (76)
        on left: 68
        on right: 69
    args_list (77)
        on left: 72 73
        on right: 69 72
    $@7 (78)
        on left: 71
        on right: 72
    call_list (79)
        on left: 75 76
        on right: 75 78 80 82
    $@8 (80)
        on left: 74
        on right: 75
    call_args <Node> (81)
        on left: 78 80 82 83
        on right: 86
    $@9 (82)
        on left: 77
        on right: 78
    $@10 (83)
        on left: 79
        on right: 80
    $@11 (84)
        on left: 81
        on right: 82
    func_def <Node> (85)
        on left: 85
        on right: 51
    $@12 (86)
        on left: 84
        on right: 85
    func_call <Node> (87)
        on left: 86
        on right: 47 52


State 0

    0 $accept: . StartDebugger $end

    $default  reduce using rule 1 ($@1)

    StartDebugger  go to state 1
    $@1            go to state 2


State 1

    0 $accept: StartDebugger . $end

    $end  shift, and go to state 3


State 2

    2 StartDebugger: $@1 . StartParse T_EndOfFile

    error     shift, and go to state 4
    T_Return  shift, and go to state 5
    T_Number  shift, and go to state 6
    T_True    shift, and go to state 7
    T_False   shift, and go to state 8
    T_ID      shift, and go to state 9
    T_NL      shift, and go to state 10
    T_Not     shift, and go to state 11
    T_String  shift, and go to state 12
    T_For     shift, and go to state 13
    T_While   shift, and go to state 14
    T_Import  shift, and go to state 15
    T_Break   shift, and go to state 16
    T_Pass    shift, and go to state 17
    T_MN      shift, and go to state 18
    T_OP      shift, and go to state 19
    T_Def     shift, and go to state 20

    constant         go to state 21
    term             go to state 22
    list_index       go to state 23
    StartParse       go to state 24
    basic_stmt       go to state 25
    arith_exp        go to state 26
    bool_exp         go to state 27
    bool_term        go to state 28
    bool_factor      go to state 29
    import_stmt      go to state 30
    pass_stmt        go to state 31
    break_stmt       go to state 32
    return_stmt      go to state 33
    assign_stmt      go to state 34
    finalStatements  go to state 35
    cmpd_stmt        go to state 36
    while_stmt       go to state 37
    for_stmt         go to state 38
    func_def         go to state 39
    func_call        go to state 40


State 3

    0 $accept: StartDebugger $end .

    $default  accept


State 4

   53 finalStatements: error . T_NL

    T_NL  shift, and go to state 41


State 5

   44 return_stmt: T_Return .

    $default  reduce using rule 44 (return_stmt)


State 6

    3 constant: T_Number .

    $default  reduce using rule 3 (constant)


State 7

   37 bool_term: T_True .

    $default  reduce using rule 37 (bool_term)


State 8

   38 bool_term: T_False .

    $default  reduce using rule 38 (bool_term)


State 9

    5 term: T_ID .
    8 list_index: T_ID . T_OB constant T_CB
   45 assign_stmt: T_ID . T_EQL arith_exp
   46            | T_ID . T_EQL bool_exp
   47            | T_ID . T_EQL func_call
   48            | T_ID . T_EQL T_OB T_CB
   86 func_call: T_ID . T_OP call_args T_CP

    T_EQL  shift, and go to state 42
    T_OP   shift, and go to state 43
    T_OB   shift, and go to state 44

    $default  reduce using rule 5 (term)


State 10

    9 StartParse: T_NL . StartParse

    error     shift, and go to state 4
    T_Return  shift, and go to state 5
    T_Number  shift, and go to state 6
    T_True    shift, and go to state 7
    T_False   shift, and go to state 8
    T_ID      shift, and go to state 9
    T_NL      shift, and go to state 10
    T_Not     shift, and go to state 11
    T_String  shift, and go to state 12
    T_For     shift, and go to state 13
    T_While   shift, and go to state 14
    T_Import  shift, and go to state 15
    T_Break   shift, and go to state 16
    T_Pass    shift, and go to state 17
    T_MN      shift, and go to state 18
    T_OP      shift, and go to state 19
    T_Def     shift, and go to state 20

    constant         go to state 21
    term             go to state 22
    list_index       go to state 23
    StartParse       go to state 45
    basic_stmt       go to state 25
    arith_exp        go to state 26
    bool_exp         go to state 27
    bool_term        go to state 28
    bool_factor      go to state 29
    import_stmt      go to state 30
    pass_stmt        go to state 31
    break_stmt       go to state 32
    return_stmt      go to state 33
    assign_stmt      go to state 34
    finalStatements  go to state 35
    cmpd_stmt        go to state 36
    while_stmt       go to state 37
    for_stmt         go to state 38
    func_def         go to state 39
    func_call        go to state 40


State 11

   39 bool_factor: T_Not . bool_factor

    T_Not  shift, and go to state 11
    T_OP   shift, and go to state 46

    bool_factor  go to state 47


State 12

    4 constant: T_String .

    $default  reduce using rule 4 (constant)


State 13

   57 for_stmt: T_For . T_ID T_In T_Range T_OP constant T_Comma constant T_CP T_Cln start_suite

    T_ID  shift, and go to state 48


State 14

   56 while_stmt: T_While . bool_exp T_Cln start_suite

    T_Number  shift, and go to state 6
    T_True    shift, and go to state 7
    T_False   shift, and go to state 8
    T_ID      shift, and go to state 49
    T_Not     shift, and go to state 11
    T_String  shift, and go to state 12
    T_MN      shift, and go to state 18
    T_OP      shift, and go to state 19

    constant     go to state 21
    term         go to state 22
    list_index   go to state 23
    arith_exp    go to state 50
    bool_exp     go to state 51
    bool_term    go to state 28
    bool_factor  go to state 29


State 15

   41 import_stmt: T_Import . T_ID

    T_ID  shift, and go to state 52


State 16

   43 break_stmt: T_Break .

    $default  reduce using rule 43 (break_stmt)


State 17

   42 pass_stmt: T_Pass .

    $default  reduce using rule 42 (pass_stmt)


State 18

   25 arith_exp: T_MN . arith_exp

    T_Number  shift, and go to state 6
    T_ID      shift, and go to state 49
    T_String  shift, and go to state 12
    T_MN      shift, and go to state 18
    T_OP      shift, and go to state 53

    constant    go to state 21
    term        go to state 22
    list_index  go to state 23
    arith_exp   go to state 54


State 19

   26 arith_exp: T_OP . arith_exp T_CP
   40 bool_factor: T_OP . bool_exp T_CP

    T_Number  shift, and go to state 6
    T_True    shift, and go to state 7
    T_False   shift, and go to state 8
    T_ID      shift, and go to state 49
    T_Not     shift, and go to state 11
    T_String  shift, and go to state 12
    T_MN      shift, and go to state 18
    T_OP      shift, and go to state 19

    constant     go to state 21
    term         go to state 22
    list_index   go to state 23
    arith_exp    go to state 55
    bool_exp     go to state 56
    bool_term    go to state 28
    bool_factor  go to state 29


State 20

   85 func_def: T_Def . T_ID $@12 T_OP args T_CP T_Cln start_suite

    T_ID  shift, and go to state 57


State 21

    6 term: constant .

    $default  reduce using rule 6 (term)


State 22

   20 arith_exp: term .

    $default  reduce using rule 20 (arith_exp)


State 23

    7 term: list_index .

    $default  reduce using rule 7 (term)


State 24

    2 StartDebugger: $@1 StartParse . T_EndOfFile

    T_EndOfFile  shift, and go to state 58


State 25

   49 finalStatements: basic_stmt .

    $default  reduce using rule 49 (finalStatements)


State 26

   17 basic_stmt: arith_exp .
   21 arith_exp: arith_exp . T_PL arith_exp
   22          | arith_exp . T_MN arith_exp
   23          | arith_exp . T_ML arith_exp
   24          | arith_exp . T_DV arith_exp
   28 bool_exp: arith_exp . T_LT arith_exp
   30         | arith_exp . T_GT arith_exp
   31         | arith_exp . T_ELT arith_exp
   32         | arith_exp . T_EGT arith_exp
   33         | arith_exp . T_In T_ID
   36 bool_term: arith_exp . T_EQ arith_exp

    T_EQ   shift, and go to state 59
    T_GT   shift, and go to state 60
    T_LT   shift, and go to state 61
    T_EGT  shift, and go to state 62
    T_ELT  shift, and go to state 63
    T_In   shift, and go to state 64
    T_MN   shift, and go to state 65
    T_PL   shift, and go to state 66
    T_DV   shift, and go to state 67
    T_ML   shift, and go to state 68

    $default  reduce using rule 17 (basic_stmt)


State 27

   18 basic_stmt: bool_exp .

    $default  reduce using rule 18 (basic_stmt)


State 28

   27 bool_exp: bool_term . T_Or bool_term
   29         | bool_term . T_And bool_term
   34         | bool_term .

    T_Or   shift, and go to state 69
    T_And  shift, and go to state 70

    $default  reduce using rule 34 (bool_exp)


State 29

   35 bool_term: bool_factor .

    $default  reduce using rule 35 (bool_term)


State 30

   15 basic_stmt: import_stmt .

    $default  reduce using rule 15 (basic_stmt)


State 31

   13 basic_stmt: pass_stmt .

    $default  reduce using rule 13 (basic_stmt)


State 32

   14 basic_stmt: break_stmt .

    $default  reduce using rule 14 (basic_stmt)


State 33

   19 basic_stmt: return_stmt .

    $default  reduce using rule 19 (basic_stmt)


State 34

   16 basic_stmt: assign_stmt .

    $default  reduce using rule 16 (basic_stmt)


State 35

   11 StartParse: finalStatements . T_NL $@2 StartParse
   12           | finalStatements . T_NL

    T_NL  shift, and go to state 71


State 36

   50 finalStatements: cmpd_stmt .

    $default  reduce using rule 50 (finalStatements)


State 37

   54 cmpd_stmt: while_stmt .

    $default  reduce using rule 54 (cmpd_stmt)


State 38

   55 cmpd_stmt: for_stmt .

    $default  reduce using rule 55 (cmpd_stmt)


State 39

   51 finalStatements: func_def .

    $default  reduce using rule 51 (finalStatements)


State 40

   52 finalStatements: func_call .

    $default  reduce using rule 52 (finalStatements)


State 41

   53 finalStatements: error T_NL .

    $default  reduce using rule 53 (finalStatements)


State 42

   45 assign_stmt: T_ID T_EQL . arith_exp
   46            | T_ID T_EQL . bool_exp
   47            | T_ID T_EQL . func_call
   48            | T_ID T_EQL . T_OB T_CB

    T_Number  shift, and go to state 6
    T_True    shift, and go to state 7
    T_False   shift, and go to state 8
    T_ID      shift, and go to state 72
    T_Not     shift, and go to state 11
    T_String  shift, and go to state 12
    T_MN      shift, and go to state 18
    T_OP      shift, and go to state 19
    T_OB      shift, and go to state 73

    constant     go to state 21
    term         go to state 22
    list_index   go to state 23
    arith_exp    go to state 74
    bool_exp     go to state 75
    bool_term    go to state 28
    bool_factor  go to state 29
    func_call    go to state 76


State 43

   86 func_call: T_ID T_OP . call_args T_CP

    T_Number  shift, and go to state 77
    T_ID      shift, and go to state 78
    T_String  shift, and go to state 79

    $default  reduce using rule 83 (call_args)

    call_args  go to state 80


State 44

    8 list_index: T_ID T_OB . constant T_CB

    T_Number  shift, and go to state 6
    T_String  shift, and go to state 12

    constant  go to state 81


State 45

    9 StartParse: T_NL StartParse .

    $default  reduce using rule 9 (StartParse)


State 46

   40 bool_factor: T_OP . bool_exp T_CP

    T_Number  shift, and go to state 6
    T_True    shift, and go to state 7
    T_False   shift, and go to state 8
    T_ID      shift, and go to state 49
    T_Not     shift, and go to state 11
    T_String  shift, and go to state 12
    T_MN      shift, and go to state 18
    T_OP      shift, and go to state 19

    constant     go to state 21
    term         go to state 22
    list_index   go to state 23
    arith_exp    go to state 50
    bool_exp     go to state 56
    bool_term    go to state 28
    bool_factor  go to state 29


State 47

   39 bool_factor: T_Not bool_factor .

    $default  reduce using rule 39 (bool_factor)


State 48

   57 for_stmt: T_For T_ID . T_In T_Range T_OP constant T_Comma constant T_CP T_Cln start_suite

    T_In  shift, and go to state 82


State 49

    5 term: T_ID .
    8 list_index: T_ID . T_OB constant T_CB

    T_OB  shift, and go to state 44

    $default  reduce using rule 5 (term)


State 50

   21 arith_exp: arith_exp . T_PL arith_exp
   22          | arith_exp . T_MN arith_exp
   23          | arith_exp . T_ML arith_exp
   24          | arith_exp . T_DV arith_exp
   28 bool_exp: arith_exp . T_LT arith_exp
   30         | arith_exp . T_GT arith_exp
   31         | arith_exp . T_ELT arith_exp
   32         | arith_exp . T_EGT arith_exp
   33         | arith_exp . T_In T_ID
   36 bool_term: arith_exp . T_EQ arith_exp

    T_EQ   shift, and go to state 59
    T_GT   shift, and go to state 60
    T_LT   shift, and go to state 61
    T_EGT  shift, and go to state 62
    T_ELT  shift, and go to state 63
    T_In   shift, and go to state 64
    T_MN   shift, and go to state 65
    T_PL   shift, and go to state 66
    T_DV   shift, and go to state 67
    T_ML   shift, and go to state 68


State 51

   56 while_stmt: T_While bool_exp . T_Cln start_suite

    T_Cln  shift, and go to state 83


State 52

   41 import_stmt: T_Import T_ID .

    $default  reduce using rule 41 (import_stmt)


State 53

   26 arith_exp: T_OP . arith_exp T_CP

    T_Number  shift, and go to state 6
    T_ID      shift, and go to state 49
    T_String  shift, and go to state 12
    T_MN      shift, and go to state 18
    T_OP      shift, and go to state 53

    constant    go to state 21
    term        go to state 22
    list_index  go to state 23
    arith_exp   go to state 84


State 54

   21 arith_exp: arith_exp . T_PL arith_exp
   22          | arith_exp . T_MN arith_exp
   23          | arith_exp . T_ML arith_exp
   24          | arith_exp . T_DV arith_exp
   25          | T_MN arith_exp .

    T_DV  shift, and go to state 67
    T_ML  shift, and go to state 68

    $default  reduce using rule 25 (arith_exp)


State 55

   21 arith_exp: arith_exp . T_PL arith_exp
   22          | arith_exp . T_MN arith_exp
   23          | arith_exp . T_ML arith_exp
   24          | arith_exp . T_DV arith_exp
   26          | T_OP arith_exp . T_CP
   28 bool_exp: arith_exp . T_LT arith_exp
   30         | arith_exp . T_GT arith_exp
   31         | arith_exp . T_ELT arith_exp
   32         | arith_exp . T_EGT arith_exp
   33         | arith_exp . T_In T_ID
   36 bool_term: arith_exp . T_EQ arith_exp

    T_EQ   shift, and go to state 59
    T_GT   shift, and go to state 60
    T_LT   shift, and go to state 61
    T_EGT  shift, and go to state 62
    T_ELT  shift, and go to state 63
    T_In   shift, and go to state 64
    T_MN   shift, and go to state 65
    T_PL   shift, and go to state 66
    T_DV   shift, and go to state 67
    T_ML   shift, and go to state 68
    T_CP   shift, and go to state 85


State 56

   40 bool_factor: T_OP bool_exp . T_CP

    T_CP  shift, and go to state 86


State 57

   85 func_def: T_Def T_ID . $@12 T_OP args T_CP T_Cln start_suite

    $default  reduce using rule 84 ($@12)

    $@12  go to state 87


State 58

    2 StartDebugger: $@1 StartParse T_EndOfFile .

    $default  reduce using rule 2 (StartDebugger)


State 59

   36 bool_term: arith_exp T_EQ . arith_exp

    T_Number  shift, and go to state 6
    T_ID      shift, and go to state 49
    T_String  shift, and go to state 12
    T_MN      shift, and go to state 18
    T_OP      shift, and go to state 53

    constant    go to state 21
    term        go to state 22
    list_index  go to state 23
    arith_exp   go to state 88


State 60

   30 bool_exp: arith_exp T_GT . arith_exp

    T_Number  shift, and go to state 6
    T_ID      shift, and go to state 49
    T_String  shift, and go to state 12
    T_MN      shift, and go to state 18
    T_OP      shift, and go to state 53

    constant    go to state 21
    term        go to state 22
    list_index  go to state 23
    arith_exp   go to state 89


State 61

   28 bool_exp: arith_exp T_LT . arith_exp

    T_Number  shift, and go to state 6
    T_ID      shift, and go to state 49
    T_String  shift, and go to state 12
    T_MN      shift, and go to state 18
    T_OP      shift, and go to state 53

    constant    go to state 21
    term        go to state 22
    list_index  go to state 23
    arith_exp   go to state 90


State 62

   32 bool_exp: arith_exp T_EGT . arith_exp

    T_Number  shift, and go to state 6
    T_ID      shift, and go to state 49
    T_String  shift, and go to state 12
    T_MN      shift, and go to state 18
    T_OP      shift, and go to state 53

    constant    go to state 21
    term        go to state 22
    list_index  go to state 23
    arith_exp   go to state 91


State 63

   31 bool_exp: arith_exp T_ELT . arith_exp

    T_Number  shift, and go to state 6
    T_ID      shift, and go to state 49
    T_String  shift, and go to state 12
    T_MN      shift, and go to state 18
    T_OP      shift, and go to state 53

    constant    go to state 21
    term        go to state 22
    list_index  go to state 23
    arith_exp   go to state 92


State 64

   33 bool_exp: arith_exp T_In . T_ID

    T_ID  shift, and go to state 93


State 65

   22 arith_exp: arith_exp T_MN . arith_exp

    T_Number  shift, and go to state 6
    T_ID      shift, and go to state 49
    T_String  shift, and go to state 12
    T_MN      shift, and go to state 18
    T_OP      shift, and go to state 53

    constant    go to state 21
    term        go to state 22
    list_index  go to state 23
    arith_exp   go to state 94


State 66

   21 arith_exp: arith_exp T_PL . arith_exp

    T_Number  shift, and go to state 6
    T_ID      shift, and go to state 49
    T_String  shift, and go to state 12
    T_MN      shift, and go to state 18
    T_OP      shift, and go to state 53

    constant    go to state 21
    term        go to state 22
    list_index  go to state 23
    arith_exp   go to state 95


State 67

   24 arith_exp: arith_exp T_DV . arith_exp

    T_Number  shift, and go to state 6
    T_ID      shift, and go to state 49
    T_String  shift, and go to state 12
    T_MN      shift, and go to state 18
    T_OP      shift, and go to state 53

    constant    go to state 21
    term        go to state 22
    list_index  go to state 23
    arith_exp   go to state 96


State 68

   23 arith_exp: arith_exp T_ML . arith_exp

    T_Number  shift, and go to state 6
    T_ID      shift, and go to state 49
    T_String  shift, and go to state 12
    T_MN      shift, and go to state 18
    T_OP      shift, and go to state 53

    constant    go to state 21
    term        go to state 22
    list_index  go to state 23
    arith_exp   go to state 97


State 69

   27 bool_exp: bool_term T_Or . bool_term

    T_Number  shift, and go to state 6
    T_True    shift, and go to state 7
    T_False   shift, and go to state 8
    T_ID      shift, and go to state 49
    T_Not     shift, and go to state 11
    T_String  shift, and go to state 12
    T_MN      shift, and go to state 18
    T_OP      shift, and go to state 19

    constant     go to state 21
    term         go to state 22
    list_index   go to state 23
    arith_exp    go to state 98
    bool_term    go to state 99
    bool_factor  go to state 29


State 70

   29 bool_exp: bool_term T_And . bool_term

    T_Number  shift, and go to state 6
    T_True    shift, and go to state 7
    T_False   shift, and go to state 8
    T_ID      shift, and go to state 49
    T_Not     shift, and go to state 11
    T_String  shift, and go to state 12
    T_MN      shift, and go to state 18
    T_OP      shift, and go to state 19

    constant     go to state 21
    term         go to state 22
    list_index   go to state 23
    arith_exp    go to state 98
    bool_term    go to state 100
    bool_factor  go to state 29


State 71

   11 StartParse: finalStatements T_NL . $@2 StartParse
   12           | finalStatements T_NL .

    T_EndOfFile  reduce using rule 12 (StartParse)
    $default     reduce using rule 10 ($@2)

    $@2  go to state 101


State 72

    5 term: T_ID .
    8 list_index: T_ID . T_OB constant T_CB
   86 func_call: T_ID . T_OP call_args T_CP

    T_OP  shift, and go to state 43
    T_OB  shift, and go to state 44

    $default  reduce using rule 5 (term)


State 73

   48 assign_stmt: T_ID T_EQL T_OB . T_CB

    T_CB  shift, and go to state 102


State 74

   21 arith_exp: arith_exp . T_PL arith_exp
   22          | arith_exp . T_MN arith_exp
   23          | arith_exp . T_ML arith_exp
   24          | arith_exp . T_DV arith_exp
   28 bool_exp: arith_exp . T_LT arith_exp
   30         | arith_exp . T_GT arith_exp
   31         | arith_exp . T_ELT arith_exp
   32         | arith_exp . T_EGT arith_exp
   33         | arith_exp . T_In T_ID
   36 bool_term: arith_exp . T_EQ arith_exp
   45 assign_stmt: T_ID T_EQL arith_exp .

    T_EQ   shift, and go to state 59
    T_GT   shift, and go to state 60
    T_LT   shift, and go to state 61
    T_EGT  shift, and go to state 62
    T_ELT  shift, and go to state 63
    T_In   shift, and go to state 64
    T_MN   shift, and go to state 65
    T_PL   shift, and go to state 66
    T_DV   shift, and go to state 67
    T_ML   shift, and go to state 68

    $default  reduce using rule 45 (assign_stmt)


State 75

   46 assign_stmt: T_ID T_EQL bool_exp .

    $default  reduce using rule 46 (assign_stmt)


State 76

   47 assign_stmt: T_ID T_EQL func_call .

    $default  reduce using rule 47 (assign_stmt)


State 77

   80 call_args: T_Number . $@10 call_list

    $default  reduce using rule 79 ($@10)

    $@10  go to state 103


State 78

   78 call_args: T_ID . $@9 call_list

    $default  reduce using rule 77 ($@9)

    $@9  go to state 104


State 79

   82 call_args: T_String . $@11 call_list

    $default  reduce using rule 81 ($@11)

    $@11  go to state 105


State 80

   86 func_call: T_ID T_OP call_args . T_CP

    T_CP  shift, and go to state 106


State 81

    8 list_index: T_ID T_OB constant . T_CB

    T_CB  shift, and go to state 107


State 82

   57 for_stmt: T_For T_ID T_In . T_Range T_OP constant T_Comma constant T_CP T_Cln start_suite

    T_Range  shift, and go to state 108


State 83

   56 while_stmt: T_While bool_exp T_Cln . start_suite

    T_Return  shift, and go to state 5
    T_Number  shift, and go to state 6
    T_True    shift, and go to state 7
    T_False   shift, and go to state 8
    T_ID      shift, and go to state 109
    T_NL      shift, and go to state 110
    T_Not     shift, and go to state 11
    T_String  shift, and go to state 12
    T_Import  shift, and go to state 15
    T_Break   shift, and go to state 16
    T_Pass    shift, and go to state 17
    T_MN      shift, and go to state 18
    T_OP      shift, and go to state 19

    constant     go to state 21
    term         go to state 22
    list_index   go to state 23
    basic_stmt   go to state 111
    arith_exp    go to state 26
    bool_exp     go to state 27
    bool_term    go to state 28
    bool_factor  go to state 29
    import_stmt  go to state 30
    pass_stmt    go to state 31
    break_stmt   go to state 32
    return_stmt  go to state 33
    assign_stmt  go to state 34
    start_suite  go to state 112


State 84

   21 arith_exp: arith_exp . T_PL arith_exp
   22          | arith_exp . T_MN arith_exp
   23          | arith_exp . T_ML arith_exp
   24          | arith_exp . T_DV arith_exp
   26          | T_OP arith_exp . T_CP

    T_MN  shift, and go to state 65
    T_PL  shift, and go to state 66
    T_DV  shift, and go to state 67
    T_ML  shift, and go to state 68
    T_CP  shift, and go to state 85


State 85

   26 arith_exp: T_OP arith_exp T_CP .

    $default  reduce using rule 26 (arith_exp)


State 86

   40 bool_factor: T_OP bool_exp T_CP .

    $default  reduce using rule 40 (bool_factor)


State 87

   85 func_def: T_Def T_ID $@12 . T_OP args T_CP T_Cln start_suite

    T_OP  shift, and go to state 113


State 88

   21 arith_exp: arith_exp . T_PL arith_exp
   22          | arith_exp . T_MN arith_exp
   23          | arith_exp . T_ML arith_exp
   24          | arith_exp . T_DV arith_exp
   36 bool_term: arith_exp T_EQ arith_exp .

    T_MN  shift, and go to state 65
    T_PL  shift, and go to state 66
    T_DV  shift, and go to state 67
    T_ML  shift, and go to state 68

    $default  reduce using rule 36 (bool_term)


State 89

   21 arith_exp: arith_exp . T_PL arith_exp
   22          | arith_exp . T_MN arith_exp
   23          | arith_exp . T_ML arith_exp
   24          | arith_exp . T_DV arith_exp
   30 bool_exp: arith_exp T_GT arith_exp .

    T_MN  shift, and go to state 65
    T_PL  shift, and go to state 66
    T_DV  shift, and go to state 67
    T_ML  shift, and go to state 68

    $default  reduce using rule 30 (bool_exp)


State 90

   21 arith_exp: arith_exp . T_PL arith_exp
   22          | arith_exp . T_MN arith_exp
   23          | arith_exp . T_ML arith_exp
   24          | arith_exp . T_DV arith_exp
   28 bool_exp: arith_exp T_LT arith_exp .

    T_MN  shift, and go to state 65
    T_PL  shift, and go to state 66
    T_DV  shift, and go to state 67
    T_ML  shift, and go to state 68

    $default  reduce using rule 28 (bool_exp)


State 91

   21 arith_exp: arith_exp . T_PL arith_exp
   22          | arith_exp . T_MN arith_exp
   23          | arith_exp . T_ML arith_exp
   24          | arith_exp . T_DV arith_exp
   32 bool_exp: arith_exp T_EGT arith_exp .

    T_MN  shift, and go to state 65
    T_PL  shift, and go to state 66
    T_DV  shift, and go to state 67
    T_ML  shift, and go to state 68

    $default  reduce using rule 32 (bool_exp)


State 92

   21 arith_exp: arith_exp . T_PL arith_exp
   22          | arith_exp . T_MN arith_exp
   23          | arith_exp . T_ML arith_exp
   24          | arith_exp . T_DV arith_exp
   31 bool_exp: arith_exp T_ELT arith_exp .

    T_MN  shift, and go to state 65
    T_PL  shift, and go to state 66
    T_DV  shift, and go to state 67
    T_ML  shift, and go to state 68

    $default  reduce using rule 31 (bool_exp)


State 93

   33 bool_exp: arith_exp T_In T_ID .

    $default  reduce using rule 33 (bool_exp)


State 94

   21 arith_exp: arith_exp . T_PL arith_exp
   22          | arith_exp . T_MN arith_exp
   22          | arith_exp T_MN arith_exp .
   23          | arith_exp . T_ML arith_exp
   24          | arith_exp . T_DV arith_exp

    T_DV  shift, and go to state 67
    T_ML  shift, and go to state 68

    $default  reduce using rule 22 (arith_exp)


State 95

   21 arith_exp: arith_exp . T_PL arith_exp
   21          | arith_exp T_PL arith_exp .
   22          | arith_exp . T_MN arith_exp
   23          | arith_exp . T_ML arith_exp
   24          | arith_exp . T_DV arith_exp

    T_DV  shift, and go to state 67
    T_ML  shift, and go to state 68

    $default  reduce using rule 21 (arith_exp)


State 96

   21 arith_exp: arith_exp . T_PL arith_exp
   22          | arith_exp . T_MN arith_exp
   23          | arith_exp . T_ML arith_exp
   24          | arith_exp . T_DV arith_exp
   24          | arith_exp T_DV arith_exp .

    $default  reduce using rule 24 (arith_exp)


State 97

   21 arith_exp: arith_exp . T_PL arith_exp
   22          | arith_exp . T_MN arith_exp
   23          | arith_exp . T_ML arith_exp
   23          | arith_exp T_ML arith_exp .
   24          | arith_exp . T_DV arith_exp

    $default  reduce using rule 23 (arith_exp)


State 98

   21 arith_exp: arith_exp . T_PL arith_exp
   22          | arith_exp . T_MN arith_exp
   23          | arith_exp . T_ML arith_exp
   24          | arith_exp . T_DV arith_exp
   36 bool_term: arith_exp . T_EQ arith_exp
